[gd_scene load_steps=2 format=1]

[ext_resource path="res://game.gd" type="Script" id=1]

[node name="Game" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Arcology" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 692.0
margin/top = 370.0
margin/right = 815.0
margin/bottom = 405.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Arcology"
flat = false

[node name="Slaves" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 914.0
margin/top = 370.0
margin/right = 1037.0
margin/bottom = 405.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Slaves"
flat = false

[node name="Quit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 823.0
margin/top = 274.0
margin/right = 894.0
margin/bottom = 310.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[connection signal="pressed" from="Arcology" to="." method="_on_Arcology_pressed"]

[connection signal="pressed" from="Slaves" to="." method="_on_Slaves_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]


